--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@ base:
   # Number of processes started
   process_count: 1
   # Number of pictures generated in each process
-  count_per_process: 1000
+  count_per_process: 2000
   # Whether to generate voc data rate
   gen_voc: False
   gen_lsvt: False
@@ -18,15 +18,15 @@ provider:
       # When generating text, the probability of selecting this corpus
       probability: 1.0
       # How to read the corpus (read line by line: line, read word by word: word)
-      type: line
+      type: word
       # Generated text length interval
       len_range: (1, 32)
       
   # Candidate area generation configuration
   smooth_area:
     down_scale: 32
-    anchor_ratio: (0.5 ,0.17, 0.25)
-    anchor_scale: (2, 4, 8)    
+    anchor_ratio: (0.5 ,0.17, 0.25, .5, .7)
+    anchor_scale: (2, 4, 8, 12, 16)    
     
     # anchor_ratio: (0.5 ,0.17, 0.25, 0.5, 1.0, 1.5, 2.0)
     # anchor_scale: (4, 8, 16, 24, 32, 36, 42, 46)
@@ -49,9 +49,9 @@ provider:
     # Text map json information output path
     text_img_info_output_dir: output/text_img_info
     # Font size
-    font_min_size: 12
+    font_min_size: 14
     # Maximum font size
-    font_max_size: 24
+    font_max_size: 36
     # The probability of using the specified color as the text color (as opposed to automatically picking the color)
     use_char_common_color_probability: 1.0
     # Specify the optional color list of the font (when generating the font map, the color will be selected from the following color list as the font color)
@@ -74,9 +74,9 @@ provider:
     # Various layout modes and their probability of selection
     strategy_list:
       - name: HorizontalStrategy
-        probability: .5
+        probability: 0
       - name: HorizontalFlowStrategy
-        probability: .5
+        probability: 1
       # - name: RandomPasteStrategy
       #   probability: 0.4
 
